--- a/css/style-pc.less
+++ b/css/style-pc.less
@@ -1578,7 +1578,7 @@ select.fiq-se, input.fiq-input { outline: none; }
       }
     }
 
-    &.fiq-newly {
+    &.fiq-newly { overflow: hidden;
       .fiq-article { .pt(0); .clear;
         .select-style { .w(240); .ib; .abs; .lt(0,40); height:50px; background:#fff; box-sizing:border-box}
         .select-style select {position:relative; z-index:2; width:100%; height:100%; padding: 0 39px 0 15px ;border:1px solid #ddd; border-radius:5px; background:transparent; font-size:15px; line-height:48px; vertical-align:middle; cursor:pointer; appearance:none; -webkit-appearance:none; -moz-appearance:none; -o-appearance:none; outline:none; box-sizing:border-box}
@@ -1855,6 +1855,142 @@ select.fiq-se, input.fiq-input { outline: none; }
             }
           }
         }
+        &.fiq-page13 {
+          .fiq-sec1 { .pt(39); .rel;
+            &:after { .cnt; .wh(100vw,680); .abs; .lt(50%,0); .bgc(#F7F7F7); .ml(-50vw); z-index: -1; }
+            .fiq-tit { .fs(34); .mb(28); }
+            .fiq-tab-wrap {
+              .fiq-tab-btn { .fs(16); .bgc(#fff); .w(50%); }
+            }
+            .fiq-cont1 {
+              .fiq-swiper { .w(1180);
+                .fiq-slide { .w(280)!important; .-a(#DDDDDD); .bgc(#fff); .-box; .br(10); overflow: hidden; .rel;
+                  &:nth-child(1):after { content:'1'; .fs(34); .bold; color:#fff; .abs; .lt(14,5); text-shadow: 0px 2px 2px rgba(0,0,0,0.2); z-index: 1; }
+                  &:nth-child(2):after { content:'2'; .fs(34); .bold; color:#fff; .abs; .lt(14,5); text-shadow: 0px 2px 2px rgba(0,0,0,0.2); z-index: 1; }
+                  &:nth-child(3):after { content:'3'; .fs(34); .bold; color:#fff; .abs; .lt(14,5); text-shadow: 0px 2px 2px rgba(0,0,0,0.2); z-index: 1; }
+                  &:nth-child(4):after { content:'4'; .fs(34); .bold; color:#fff; .abs; .lt(14,5); text-shadow: 0px 2px 2px rgba(0,0,0,0.2); z-index: 1; }
+                  &:nth-child(5):after { content:'5'; .fs(34); .bold; color:#fff; .abs; .lt(14,5); text-shadow: 0px 2px 2px rgba(0,0,0,0.2); z-index: 1; }
+                  &:nth-child(6):after { content:'6'; .fs(34); .bold; color:#fff; .abs; .lt(14,5); text-shadow: 0px 2px 2px rgba(0,0,0,0.2); z-index: 1; }
+                  &:nth-child(7):after { content:'7'; .fs(34); .bold; color:#fff; .abs; .lt(14,5); text-shadow: 0px 2px 2px rgba(0,0,0,0.2); z-index: 1; }
+                  &:nth-child(8):after { content:'8'; .fs(34); .bold; color:#fff; .abs; .lt(14,5); text-shadow: 0px 2px 2px rgba(0,0,0,0.2); z-index: 1; }
+                  &:nth-child(9):after { content:'9'; .fs(34); .bold; color:#fff; .abs; .lt(14,5); text-shadow: 0px 2px 2px rgba(0,0,0,0.2); z-index: 1; }
+                  &:nth-child(10):after { content:'10'; .fs(34); .bold; color:#fff; .abs; .lt(14,5); text-shadow: 0px 2px 2px rgba(0,0,0,0.2); z-index: 1; }
+                  .fiq-img span { .bgc(#F1F3F8); }
+                  .fiq-top { .p(12,12,20); .-box; .tl;
+                    p { .fs(20); .bold; }
+                    ul { .mt(10);
+                      li { .lh(27);
+                        p { .fs(14); .regular;
+                          span { color:#888; .ib; .w(72); .regular; }
+                          &:nth-child(1) { color:#DD872B; }
+                          &:nth-child(2) { color:#222!important; .bold; }
+                          .fiq-s { .lh(18); color:#fff; .bgc(#888); .ml(0); .tc; .p(2,17); .-box; .br(6);  }
+                          .fiq-indi { .wh(11,4); .bgc(#888); .ib; .mb(2); }
+                        }
+                        &.fiq-up {
+                          p {
+                            &:nth-child(1) { color:#FF0000; .bold; }
+                            .fiq-s { .bgc(#FF0000); }
+                            .fiq-indi { .wh(0); background: none; border-left: 6px solid transparent; border-right: 6px solid transparent; border-bottom: 10px solid #ff0000; .mb(0); }
+                          }
+                        }
+                        &.fiq-down {
+                          p {
+                            &:nth-child(1) { color:#2175FF; .bold; }
+                            .fiq-s { .bgc(#2175FF); }
+                            .fiq-indi { .wh(0); background: none; border-left: 6px solid transparent; border-right: 6px solid transparent; border-top: 10px solid #2175FF; .mb(0); }
+                          }
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+          .fiq-sec2 { .pb(0); .mb(0);
+            &:after { .hide; }
+            .fiq-tab-wrap { .mb(0); .h(46); .bgc(#fff); .br(0); .pt(4); .-box;
+              .fiq-tab-btn { .fs(16); color:#888; .w(60); .br(0); .-a; .h(42); .-b(#222); .regular; }
+              &.fiq-tab1-active .fiq-tab-btn1,
+              &.fiq-tab2-active .fiq-tab-btn2,
+              &.fiq-tab3-active .fiq-tab-btn3,
+              &.fiq-tab4-active .fiq-tab-btn4,
+              &.fiq-tab5-active .fiq-tab-btn5,
+              &.fiq-tab6-active .fiq-tab-btn6 { color:#222; .-a; .-b(#222,4px); .br-t(0); }
+            }
+            .fiq-cont { .tl; .bgc(#fff); .p(30,12); .-a; .w(1180); .-box;
+              .fiq-list { .mb(9);
+                .fiq-tit { .fs(14); .ls(-0.35); .lh(40); .ib; .vam; .w(79); .tl; .m(0); .regular; .-t; .pt(0); }
+                .fiq-tit2 { .w(130); .ml(45); }
+                .fiq-date-wrap { .ib; .-a(#DDDDDD); .br(0); .-box; .p(0,10); .lh(40); .wh(306,40); .ib; .vam;
+                  input { .fs(14); .wh(125,40); .-box; .ib; .vam; .-a; background: transparent; }
+                  span { .fs(14); .ib; .m(0,10); .lh(40); .vam; }
+                }
+                .select-style { .w(130); .t(0); .br(0); .ml(10); .ib; position:relative; height:40px; background:#fff; box-sizing:border-box; .ib; .vam; }
+                .select-style2 { .w(446); .ml(0); }
+                .select-style3 { .w(130); .ml(0); }
+                .select-style select {position:relative; z-index:2; width:100%; height:100%; padding: 0 39px 0 15px ;border:1px solid #ddd; .lh(38); border-radius:0; background:transparent; font-size:15px;  vertical-align:middle; cursor:pointer; appearance:none; -webkit-appearance:none; -moz-appearance:none; -o-appearance:none; outline:none; box-sizing:border-box}
+                .select-style select::-ms-expand {opacity:0}
+                .select-style select option {font-size:15px}
+                .select-style::after {content:''; position:absolute; top:15px; right:15px; width:5px; height:5px; border-right:1px solid #222; border-bottom:1px solid #222; transform:rotate(45deg)}
+                input { .fs(14); .wh(446,40); .-a(#ddd); .br(0); .p(0,10); .-box; .ib; .vam; .ml(0); }
+              }
+              .fiq-list2 { .mb(28);
+                .fiq-select { .w(446); .ml(0); }
+              }
+              .fiq-list3 {
+                .fiq-select { .ml(0); .ib; .vam; }
+                input { .wh(790,40); .-a(#ddd); .br(0); .p(0,10); .-box; .m(0,8); .ib; .vam; }
+                .fiq-find { .fs(14); .ls(-0.35); color:#fff; .bold; .bgc(#2D3039); .tc; .wh(210,40); .lh(40); .br(0); .m(0); .ib; .vam; }
+              }
+            }
+          }
+          .fiq-sec3 { .rel; .p(0); .-t(#222);
+            &:after { .hide; }
+            .fiq-box-wrap { .bgc(#fff); .p(30,0,30,24); .-box; .wh(1180,281); .-a(#DDDDDD); .tl; .mb(0); .-a; .-b(#ddd);
+              .fiq-img, .fiq-r { .ib; .vat; }
+              .fiq-r { .p(20,0,20,20); .-box; .tl; .w(790); border-right: 1px dotted #ddd;
+                .fiq-top { .p(0);
+                  p { .fs(20); .lh(27); .ib; .vam; .mb(10); .bold;
+                    span { .fs(14); color:#888; .ib; .vam; .mr(10); .regular; }
+                  }
+                  p + p { .vam; .w(330); overflow: hidden; text-overflow: ellipsis; display: -webkit-inline-box; -webkit-line-clamp: 1; -webkit-box-orient: vertical; word-wrap:break-word; line-height: 1.2em; .pointer; }
+                  ul {
+                    li { .w(250);
+                      p { .fs(14); .regular;
+                        span { .fs(14); .regular; color:#888; .ib; .w(72); .regular; }
+                        &:nth-child(1) { color:#DD872B; }
+                        &:nth-child(2) { color:#222!important; .bold; }
+                        .fiq-s { color:#fff; .bgc(#888); .ml(-5); .lh(17); .tc; .p(2,17); .-box; .br(6); }
+                        .fiq-indi { .wh(11,4); .bgc(#888); .ib; .mb(2); }
+                      }
+                      &.fiq-up {
+                        p {
+                          &:nth-child(1) { color:#FF0000; .bold; }
+                          .fiq-s { .bgc(#FF0000); }
+                          .fiq-indi { .wh(0); background: none; border-left: 6px solid transparent; border-right: 6px solid transparent; border-bottom: 10px solid #ff0000; .mb(0); }
+                        }
+                      }
+                      &.fiq-down {
+                        p {
+                          &:nth-child(1) { color:#2175FF; .bold; }
+                          .fiq-s { .bgc(#2175FF); }
+                          .fiq-indi { .wh(0); background: none; border-left: 6px solid transparent; border-right: 6px solid transparent; border-top: 10px solid #2175FF; .mb(0); }
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+              .fiq-down { .ib; .vam; .rel; .wh(139,100%);
+                a { .wh(68,68); .br(50%); .bgc(#F8F8F8); .abs; .lt(50%,50%); transform: translate(-50%,-50%); .pointer;
+                  &:after { .cnt; .abs; .wh(68,68); .lt(50%,50%); transform: translate(-50%,-50%); .contain('../img/pc/ico-download.svg'); pointer-events: none; }
+                }
+              }
+            }
+          }
+        }
       }
       select::-ms-expand { display: none; }
       select { -o-appearance: none; -webkit-appearance: none; -moz-appearance: none; appearance: none; }
@@ -1912,13 +2048,13 @@ select.fiq-se, input.fiq-input { outline: none; }
     }
     &.open { .ib; }
   }
-  .fiq-search-popup { .fix; .lt; .f; z-index: 1; .hide;
+  .fiq-search-popup { .fix; .lt; .f; z-index: 10; .hide;
     .fiq-dim { .fix; .lt; .f; .bgc(#000); opacity: 0.3; }
     .fiq-pop-inner { .abs; .lt(50%,50%); .bgc(#fff); .wh(600,600); .m(-300,-300); .-a(#707070); .p(30); .-box;
-      .fiq-top { .fs(0); width: auto; height: auto;
+      .fiq-top-t { .fs(0); width: auto; height: auto;
         input, .fiq-a { .fs(12); color:#222; .h(40); .lh(40); .-a(#DDDDDF); .br(4); .ib; .vam; }
         input { .w(455); .tl; .pl(20); .-box; .mr(3); }
-        .fiq-a { .w(80); .-a; .bgc(#888); .tc; color:#fff; }
+        .fiq-a { .w(80); .-a; .bgc(#2D3039); .tc; color:#fff; }
       }
       .fiq-search-cont { .mt(10); .-a(#DDDDDF); .-box; .br(4); .rel;
         &:before { .cnt; .wh(1,100%); .bgc(#DDDDDF); .abs; .lt(50%,0); }
@@ -1938,7 +2074,7 @@ select.fiq-se, input.fiq-input { outline: none; }
           }
         }
       }
-      .fiq-list-view { .fs(12); color:#fff; .wh(95,40); .lh(40); .tc; .br(4); .bgc(#152B67); .block; .mt(68); .mh-c; }
+      .fiq-list-view { .fs(12); color:#fff; .wh(95,40); .lh(40); .tc; .br(4); .bgc(#2D3039); .block; .mt(68); .mh-c; }
     }
     &.fiq-on { .block; }
   }
